# SimulationPlatform

./: CMakeLists.txt  CMakeUserPresets.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
SimulationPlatform/: CMakeLists.txt  SimulationWorker.cpp  SimulationWorker.h  main.cpp  mainwindow.ui
SimulationPlatform/core/: Environment.cpp  RigidBody.cpp  RigidBody.h  Target.cpp
core/: Environment.h  RigidBody.cpp  RigidBody.h  Target.h  Vector.cpp  Vector.h  VirtualCamera.cpp  VirtualCamera.h
simulation/: SimulationWorker.cpp  SimulationWorker.h
